--- a/libhsail-rt/Makefile.in
+++ b/libhsail-rt/Makefile.in
@@ -181,14 +181,11 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(toolexeclibdir)"
 LTLIBRARIES = $(toolexeclib_LTLIBRARIES)
-libhsail_rt_la_LIBADD =
-am__dirstamp = $(am__leading_dot)dirstamp
-am__objects_1 = rt/arithmetic.lo rt/atomics.lo rt/bitstring.lo \
-	rt/fbarrier.lo rt/fp16.lo rt/misc.lo rt/multimedia.lo \
-	rt/queue.lo rt/sat_arithmetic.lo rt/segment.lo rt/workitems.lo \
-	rt/fibers.lo
-am_libhsail_rt_la_OBJECTS = $(am__objects_1)
-libhsail_rt_la_OBJECTS = $(am_libhsail_rt_la_OBJECTS)
+@ENABLE_FILESYSTEM_TS_TRUE@am__DEPENDENCIES_1 = $(top_builddir)/src/filesystem/libstdc++fs.la
+@ENABLE_BACKTRACE_TRUE@am__DEPENDENCIES_2 = $(top_builddir)/src/libbacktrace/libstdc++_libbacktrace.la
+am__objects_1 = contract.lo
+am_libstdc__exp_la_OBJECTS = $(am__objects_1)
+libstdc__exp_la_OBJECTS = $(am_libstdc__exp_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -392,11 +389,15 @@ ACLOCAL_AMFLAGS = -I .. -I ../config
 WARN_CFLAGS = $(WARN_FLAGS) $(WERROR)
 
 # -I/-D flags to pass when compiling.
-AM_CPPFLAGS = -I$(srcdir)/rt -I$(srcdir)/include/internal
-AM_CFLAGS = \
-	-I $(srcdir)/../include \
-	-I $(srcdir)/../libgcc \
-	-I $(MULTIBUILDTOP)../../gcc/include $(PTH_CFLAGS)
+AM_CPPFLAGS = $(GLIBCXX_INCLUDES) $(CPPFLAGS)
+toolexeclib_LTLIBRARIES = libstdc++exp.la
+@ENABLE_FILESYSTEM_TS_FALSE@filesystem_lib = 
+@ENABLE_FILESYSTEM_TS_TRUE@filesystem_lib = $(top_builddir)/src/filesystem/libstdc++fs.la
+@ENABLE_BACKTRACE_FALSE@backtrace_lib = 
+@ENABLE_BACKTRACE_TRUE@backtrace_lib = $(top_builddir)/src/libbacktrace/libstdc++_libbacktrace.la
+headers = 
+sources = \
+	contract.cc
 
 toolexeclib_LTLIBRARIES = libhsail-rt.la
 runtime_files = \
@@ -413,8 +414,28 @@ runtime_files = \
 	rt/workitems.c \
 	rt/fibers.c
 
-libhsail_rt_la_SOURCES = $(runtime_files)
-libhsail_rt_la_LDFLAGS = -rpath '$(libdir)'
+# vpath % $(top_srcdir)/src/experimental
+libstdc__exp_la_SOURCES = $(sources)
+libstdc__exp_la_LIBADD = \
+	$(top_builddir)/src/c++23/libc++23convenience.la \
+	$(filesystem_lib) $(backtrace_lib)
+
+libstdc__exp_la_DEPENDENCIES = \
+	$(top_builddir)/src/c++23/libc++23convenience.la \
+	$(filesystem_lib) $(backtrace_lib)
+
+
+# AM_CXXFLAGS needs to be in each subdirectory so that it can be
+# modified in a per-library or per-sub-library way.  Need to manually
+# set this option because CONFIG_CXXFLAGS has to be after
+# OPTIMIZE_CXXFLAGS on the compile line so that -O2 can be overridden
+# as the occasion calls for it.
+AM_CXXFLAGS = \
+	-std=gnu++17 -nostdinc++ \
+	$(glibcxx_lt_pic_flag) $(glibcxx_compiler_shared_flag) \
+	$(XTEMPLATE_FLAGS) $(VTV_CXXFLAGS) \
+	$(WARN_CXXFLAGS) $(OPTIMIZE_CXXFLAGS) $(CONFIG_CXXFLAGS) \
+	-fimplicit-templates
 
 # Work around what appears to be a GNU make bug handling MAKEFLAGS
 # values defined in terms of make variables, as is the case for CC and
