--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1367,6 +1367,7 @@ OBJS = \
 	fixed-value.o \
 	fold-const.o \
 	fold-const-call.o \
+	fold-mem-offsets.o \
 	function.o \
 	function-abi.o \
 	function-tests.o \
